@@ -9,5 +9,7 @@
 <!-- GLIB CLASSES -->
 <xi:include href="pygio-applaunchcontext.xml"/>
 <xi:include href="pygio-cancellable.xml"/>
+<xi:include href="pygio-emblem.xml"/>
+<xi:include href="pygio-constants.xml"/>
 
 </chapter>
