@@ -1,0 +1,176 @@
+<?xml version="1.0" standalone="no"?>
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+    "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+
+<refentry id="class-gioemblem">
+    <refnamediv>
+        <refname>gio.Emblem</refname>
+        <refpurpose>An object for emblems.</refpurpose>
+    </refnamediv>
+
+    <refsect1>
+        <title>Synopsis</title>
+
+    <classsynopsis language="python">
+        <ooclass><classname>gio.Emblem</classname></ooclass>
+        <ooclass><classname><link linkend="class-gobject">gobject.GObject</link></classname></ooclass>
+        <ooclass><classname><link linkend="class-gioicon">gio.Icon</link></classname></ooclass>
+    
+    <constructorsynopsis language="python">
+	<methodname><link linkend="constructor-giocancellable">gio.Emblem</link></methodname>
+	<methodparam><parameter role="keyword">icon</parameter></methodparam>
+    </constructorsynopsis>
+    
+    <methodsynopsis language="python">
+        <methodname><link linkend="method-giocancellable--get-icon">get_icon</link></methodname>
+        <methodparam></methodparam>
+    </methodsynopsis>
+    <methodsynopsis language="python">
+        <methodname><link linkend="method-giocancellable--get-origin">get_origin</link></methodname>
+        <methodparam></methodparam>
+    </methodsynopsis>
+    
+    </classsynopsis>
+
+<programlisting>
+<emphasis role="bold">Functions</emphasis>
+ 
+<methodsynopsis language="python">
+    <methodname><link linkend="function-gio--emblem-new-with-origin">gio.emblem_new_with_origin</link></methodname>
+    <methodparam><parameter role="keyword">origin</parameter></methodparam>
+</methodsynopsis></programlisting>
+
+    </refsect1>
+
+    <refsect1>
+        <title>Ancestry</title>
+
+<synopsis>+-- <link linkend="class-gobject">gobject.GObject</link>
+  +-- <link linkend="class-gioemblem">gio.Emblem</link>
+</synopsis>
+
+    </refsect1>
+
+    <refsect1>
+        <title>Description</title>
+
+        <para>
+            The <link linkend="class-gioemblem"><classname>gio.Emblem</classname></link>
+            class is an implementation of <classname><link linkend="class-gioicon">gio.Icon</link></classname>
+            that supports having an emblem, which is an icon with additional properties.
+            It can than be added to a
+            <link linkend="class-gioemblemedicon"><classname>gio.EmblemedIcon</classname></link>.
+        </para>
+        <para>
+            Currently, only metainformation about the emblem's origin is supported.
+            More may be added in the future.
+        </para>
+    </refsect1>
+
+    <refsect1 id="constructor-gioemblem">
+        <title>Constructor</title>
+  
+        <programlisting><constructorsynopsis language="python">
+            <methodname>gio.Emblem</methodname>
+            <methodparam><parameter role="keyword">icon</parameter></methodparam>
+        </constructorsynopsis></programlisting>
+        <variablelist>
+            <varlistentry>
+                <term><parameter>icon</parameter>&nbsp;:</term>
+                <listitem><simpara>a
+                <link linkend="class-gioicon"><classname>gio.Icon</classname></link> containing the icon.
+                </simpara></listitem>
+            </varlistentry>
+            <varlistentry>
+                <term><emphasis>Returns</emphasis>&nbsp;:</term>
+                <listitem><simpara>a new
+                <link linkend="class-gioemblem"><classname>gio.Emblem</classname></link>.
+                </simpara></listitem>
+            </varlistentry>
+        </variablelist>
+    
+        <para>
+            Creates a new <link linkend="class-gioemblem"><classname>gio.Emblem</classname></link> for icon.
+        </para>
+  
+    </refsect1>
+
+    <refsect1>
+        <title>Methods</title>
+
+        <refsect2 id="method-giocancellable--get-icon">
+            <title>gio.Emblem.get_icon</title>
+
+            <programlisting><methodsynopsis language="python">
+                <methodname>get_icon</methodname>
+                <methodparam></methodparam>
+            </methodsynopsis></programlisting>
+            
+            <variablelist>
+                <varlistentry>
+                    <term><emphasis>Returns</emphasis>&nbsp;:</term>
+                    <listitem><simpara>a
+                    <link linkend="class-gioicon"><classname>gio.Icon</classname></link>.
+                    </simpara></listitem>
+                </varlistentry>
+            </variablelist>
+    
+            <para>
+                The <methodname>get_icon</methodname>() method gives back the icon from emblem.
+            </para>
+        </refsect2>
+
+        <refsect2 id="method-giocancellable--get-origin">
+            <title>gio.Emblem.get_origin</title>
+
+            <programlisting><methodsynopsis language="python">
+                <methodname>get_origin</methodname>
+                <methodparam></methodparam>
+            </methodsynopsis></programlisting>
+            
+            <variablelist>
+                <varlistentry>
+                    <term><emphasis>Returns</emphasis>&nbsp;:</term>
+                    <listitem><simpara>the origin of the emblem.
+                    </simpara></listitem>
+                </varlistentry>
+            </variablelist>
+    
+            <para>
+                The <methodname>get_origin</methodname>() method gets the origin of the emblem.
+            </para>
+        </refsect2>
+    </refsect1>
+    
+    <refsect1>
+        <title>Functions</title>
+
+        <refsect2 id="function-gio--emblem-new-with-origin">
+            <title>gio.emblem_new_with_origin</title>
+
+            <programlisting><methodsynopsis language="python">
+                <methodname>emblem_new_with_origin</methodname>
+                <methodparam><parameter role="keyword">origin</parameter></methodparam>
+            </methodsynopsis></programlisting>
+            
+            <variablelist>
+                <varlistentry>
+                    <term><parameter>origin</parameter>&nbsp;:</term>
+                    <listitem><simpara>a <xref linkend="gio-emblem-origin-constants" endterm="gio-emblem-origin-constants-title"></xref>
+                    defining the emblem's origin .
+                    </simpara></listitem>
+                </varlistentry>
+                <varlistentry>
+                    <term><emphasis>Returns</emphasis>&nbsp;:</term>
+                    <listitem><simpara>A <link linkend="class-gioemblem"><classname>gio.Emblem</classname></link>.
+                    </simpara></listitem>
+                </varlistentry>
+            </variablelist>
+
+            <para>
+                The <methodname>emblem_new_with_origin</methodname>() function creates
+                a new emblem for icon.
+            </para>
+        </refsect2>
+    </refsect1>
+</refentry>
